Fix hero button gap

--- a/styles/block/_hero.scss
+++ b/styles/block/_hero.scss
@@ -192,9 +192,13 @@
     }
 
     &__actions {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 24px;
+
         @include mixin.media('tablet') {
-            display: flex;
-            gap: 24px;
+            flex-direction: row;
             margin-top: 52px;
         }
     }
